# Ardakan

./: .gitignore
Ardakan-Client/: Cargo.toml
Ardakan-Client/src/: main.rs
Ardakan-Server/: Cargo.toml
Ardakan-Server/src/: infrastructure.rs  main.rs
Tehran/: Cargo.toml
Tehran/src/: ardakan_config.rs  configuration.rs  lib.rs  main.rs  setvol_config.rs  soundlib_config.rs  utils.rs
