[package]
name = "Ardakan-Server"
version = "3.0.1"
edition = "2021"

[dependencies]
# cryptography
rsa = {version = "0.8.2", features=["pem"]}
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
# other
lazy_static = "1.4.0"
windows = {version = "0.46.0",features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"]}
local-ip-address = "0.5.1"
