[package]
name = "Tehran"
version = "1.0.0"
edition = "2021"

[dependencies]
windows = {version = "0.46.*",features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"]}
sha2 = {version = "0.10.*"}
chacha20poly1305 = {version = "0.10.*", features = ["reduced-round"]}
lazy_static = "1.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
rand = "0.8.*"
zip = "0.6.*"
[lib]
crate-type = ["cdylib"]